# GeoClimate-Fetcher

./: .dockerignore  .env.example  .gitignore  5.14.0  CONVERSION_SUMMARY.md  DARK_MODE_IMPLEMENTATION.md  DOWNLOAD_IMPLEMENTATION.md  Dockerfile  GEODATA_EXPLORER_IMPROVEMENTS.md  GEODATA_IMPROVEMENTS.md  MAP_VISUALIZATION_TOGGLE_FIX.md  PLATFORM_ROADMAP.md  PODCAST_BIO.md  PRODUCT_SELECTOR_GUIDE.md  README-STREAMLIT.md  README.md  STREAMLIT_CLOUD_SETUP.md  TEMPORAL_DISAGGREGATION_README.md  a.ipynb  app.py  app_utils.py  automatic_download_test.py  cv.tex  dark_mode_test.py  docker-compose.yml  download_test.py  environment.yml  geemap_compat.py  install-linux.sh  install-mac.command  install-windows.bat  instant_download_test.py  main.py  meteostat_try.py  pyproject.toml  requirements-streamlit.txt  requirements.txt  run-linux.sh  run-mac.command  run-windows.bat  (+7 more)
.claude/: settings.local.json
.github/workflows/: refresh_stac_snapshot.yml
Snow_Depth_ERDC/: snow_depth_app.py
app_components/: __init__.py  auth_component.py  data_processors.py  dataset_component.py  download_component.py  drive_export_manager.py  geometry_component.py  global_navigation.py  layout.py  memory_utils.py  post_download_integration.py  product_selector_component.py  product_selector_data_manager.py  product_selector_visualizer.py  quick_visualization.py  raw_data_viewer.py  temporal_disaggregation_component.py  theme_utils.py  user_registration.py  visualization_utils.py
data/temp_dissag_data/: precipitation.csv  station metadata.csv
docs/: MEMORY_OPTIMIZATION.md  STAC_INTEGRATION.md
geoclimate_fetcher/: Dockerfile  README-webapp.md  README.md  __init__.py  app.py  climate_indices.py  docker-compose.yml  environment.yml  hydrology_analysis.py  requirements-web.txt  requirements.txt  run_webapp.py  serves_calculator.py  setup.py  state_manager.py  test_bands.py  visualization.py
geoclimate_fetcher/cli/: fetch.py
geoclimate_fetcher/core/: __init__.py  band_math.py  climate_analysis_runner.py  dataset_config.py  dataset_models.py  download_utils.py  ee_cache.py  exporter.py  gee_auth.py  geometry.py  map_widget.py  metadata.py  product_selector.py  stac_cache.py  stac_client.py  temporal_disaggregation.py
geoclimate_fetcher/data/: Creating_multiple_datasets.ipynb  Datasets copy.csv  Datasets.csv  datasets.json  dem.csv  humidity.csv  (+11 more)
interface/: __init__.py  admin_dashboard.py  climate_analytics.py  data_visualizer.py  geodata_explorer.py  hydrology_analyzer.py  multi_geometry_export.py  product_selector.py  raster_calculator.py  router.py  serves.py  snow_depth.py
landing-page/: .gitignore  DEPLOYMENT.md  GITHUB_PAGES_DEPLOYMENT.md  PUBLISHING_SUBFOLDER_GUIDE.md  README.md  index.html  package.json  script.js  styles.css
scripts/: generate_stac_snapshot.py
temp/: sample_precipitation_data.csv  sample_station_metadata.csv
(+22 files in other folders)
